--- a/source/client/package.json
+++ b/source/client/package.json
@@ -11,6 +11,7 @@
     "bootstrap": "^4.4.1",
     "connected-react-router": "^6.6.1",
     "history": "^4.10.1",
+    "js-cookie": "^2.2.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-redux": "^7.1.3",
